@@ -3,6 +3,7 @@ Revision history for Dist-Zilla-Plugin-DynamicPrereqs
 {{$NEXT}}
           - documentation added regarding the lack of ability to use dynamic
             requires-recommends, requires-suggests etc
+          - add is_miniperl() helper sub
 
 0.032     2016-08-16 01:00:05Z
           - in _add_prereq sub, do not warn about prereq merging if the
